--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enalmada/storybook-addon-mock-urql",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "scripts": {
     "build": "rm -rf dist && bun build.mjs && bun run build:declaration",
     "build:declaration": "tsc --emitDeclarationOnly",
@@ -11,7 +11,10 @@
     "release": "bun run build && bunx changeset publish",
     "type-check": "bun --bun tsc --noEmit"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@urql/core": "^4.1.3",
+    "graphql": "^16.8.1"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
@@ -30,16 +33,20 @@
   "types": "dist/index.d.ts",
   "author": "Adam Lane",
   "description": "mock urql queries in storybook",
-  "keywords": [],
+  "keywords": [
+    "mock",
+    "storybook",
+    "urql"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Enalmada/npm-module-template/issues"
+    "url": "https://github.com/Enalmada/storybook-addon-mock-urql/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Enalmada/npm-module-template.git"
+    "url": "git+https://github.com/Enalmada/storybook-addon-mock-urql.git"
   },
-  "homepage": "https://github.com/Enalmada/npm-module-template",
+  "homepage": "https://github.com/Enalmada/storybook-addon-mock-urql",
   "private": false,
   "publishConfig": {
     "access": "public"
