--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@urql/core": "^4.1.3",
     "graphql": "^16.8.1"
   },
+  "peerDependencies": {
+    "storybook-addon-mock": "^4.3.0"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@types/node": "^20.6.5",
