--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@urql/core": "^4.1.3",
     "graphql": "^16.8.1"
   },
+  "peerDependencies": {
+    "storybook-addon-mock": "^4.3.0"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
