--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "dependencies": {},
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
+    "@enalmada/bun-externals": "^0.0.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/node": "^20.8.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "bun-types": "^1.0.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.51.0",
@@ -28,7 +29,7 @@
     "fixpack": "^4.0.0",
     "graphql": "^16.8.1",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.0.1",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
