--- a/package.json
+++ b/package.json
@@ -1,66 +1,59 @@
 {
-  "name": "@enalmada/storybook-addon-mock-urql",
-  "version": "0.0.4",
-  "scripts": {
-    "build": "rm -rf dist && bun build.ts && bun run build:declaration",
-    "build:declaration": "tsc --emitDeclarationOnly",
-    "lint": "eslint . --ext .ts,.tsx,.cjs,.mjs && bun type-check",
-    "lint:fix": "eslint . --fix --ext .ts,.tsx,.cjs,.mjs && bun type-check",
-    "precommit": "bun lint-staged",
-    "prepare": "husky install",
-    "release": "bun run build && bunx changeset publish",
-    "test": "bun run test:unit",
-    "test:unit": "cross-env NODE_ENV=test vitest",
-    "type-check": "bun --bun tsc --noEmit"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@changesets/cli": "2.27.5",
-    "@enalmada/bun-externals": "0.0.7",
-    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
-    "@scaleway/changesets-renovate": "2.1.2",
-    "@types/node": "20.16.14",
-    "@typescript-eslint/eslint-plugin": "7.10.0",
-    "@typescript-eslint/parser": "7.10.0",
-    "bun-types": "1.1.32",
-    "cross-env": "7.0.3",
-    "eslint": "9.11.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.2.1",
-    "fixpack": "4.0.0",
-    "graphql": "16.8.2",
-    "husky": "9.0.11",
-    "lint-staged": "15.2.7",
-    "prettier": "3.2.5",
-    "typescript": "5.6.3",
-    "vitest": "2.0.3"
-  },
-  "peerDependencies": {
-    "storybook-addon-mock": "^4.3.0 || ^5.0.0",
-    "graphql": "^16.8.1",
-    "@urql/core": "^4.1.3 || ^5.0.0"
-  },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "author": "Adam Lane",
-  "description": "mock urql queries in storybook",
-  "keywords": [
-    "mock",
-    "storybook",
-    "urql"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Enalmada/storybook-addon-mock-urql/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Enalmada/storybook-addon-mock-urql.git"
-  },
-  "homepage": "https://github.com/Enalmada/storybook-addon-mock-urql",
-  "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
-  "type": "module"
+	"name": "@enalmada/storybook-addon-mock-urql",
+	"version": "0.0.4",
+	"scripts": {
+		"build": "bun build:clear && bun build:script && bun build:declaration",
+		"build:clear": "rm -rf dist",
+		"build:declaration": "tsc --emitDeclarationOnly",
+		"build:script": "cross-env NODE_ENV=production bun build.ts",
+		"lint": "biome check --fix --unsafe",
+		"pre-commit": "bun lint-staged",
+		"prepare": "husky install",
+		"release": "bun run build && bunx changeset publish",
+		"test": "bun run test:unit",
+		"test:unit": "cross-env NODE_ENV=test vitest",
+		"type-check": "bun --bun tsc --noEmit"
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@changesets/cli": "2.27.9",
+		"@enalmada/bun-externals": "0.0.7",
+		"@scaleway/changesets-renovate": "2.1.2",
+		"@types/node": "22.8.1",
+		"cross-env": "7.0.3",
+		"fixpack": "4.0.0",
+		"graphql": "16.9.0",
+		"husky": "9.1.6",
+		"lint-staged": "15.2.10",
+		"turbo": "^2.2.3",
+		"typescript": "5.6.3",
+		"vitest": "2.1.3"
+	},
+	"peerDependencies": {
+		"storybook-addon-mock": "^4.3.0 || ^5.0.0",
+		"graphql": "^16.8.1",
+		"@urql/core": "^4.1.3 || ^5.0.0"
+	},
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"author": "Adam Lane",
+	"description": "mock urql queries in storybook",
+	"keywords": ["mock", "storybook", "urql"],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Enalmada/storybook-addon-mock-urql/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Enalmada/storybook-addon-mock-urql.git"
+	},
+	"homepage": "https://github.com/Enalmada/storybook-addon-mock-urql",
+	"private": false,
+	"publishConfig": {
+		"access": "public"
+	},
+	"type": "module",
+	"packageManager": "bun@1.1.33",
+	"trustedDependencies": ["@biomejs/biome"]
 }
