--- a/website/package.json
+++ b/website/package.json
@@ -1,37 +1,34 @@
 {
-  "name": "website",
-  "version": "0.0.1",
-  "scripts": {
-    "astro": "astro",
-    "build": "astro check && astro build",
-    "dev": "astro dev",
-    "lint": "eslint . --ext .ts,.tsx,.cjs,.mjs && bun type-check",
-    "lint:fix": "eslint . --fix --ext .ts,.tsx,.cjs,.mjs && bun type-check",
-    "preview": "astro preview",
-    "start": "astro dev",
-    "type-check": "bun --bun tsc --noEmit"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.9.0",
-    "@astrojs/prefetch": "^0.4.1",
-    "@astrojs/react": "^3.0.4",
-    "@astrojs/starlight": "^0.28.0",
-    "@astrojs/starlight-tailwind": "^2.0.1",
-    "@astrojs/tailwind": "^5.0.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "astro": "^4.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "sharp": "^0.33.0",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^5.2.2"
-  },
-  "author": "",
-  "description": "module website",
-  "license": "UNLICENSED",
-  "type": "module",
-  "trustedDependencies": [
-    "sharp"
-  ]
+	"name": "website",
+	"version": "0.0.1",
+	"scripts": {
+		"astro": "astro",
+		"build": "astro check && astro build",
+		"dev": "astro dev",
+		"preview": "astro preview",
+		"start": "astro dev",
+		"type-check": "bun --bun tsc --noEmit"
+	},
+	"dependencies": {
+		"@astrojs/check": "0.9.4",
+		"@astrojs/prefetch": "0.4.1",
+		"@astrojs/react": "3.6.2",
+		"@astrojs/starlight": "0.28.3",
+		"@astrojs/starlight-tailwind": "2.0.3",
+		"@astrojs/tailwind": "5.1.2",
+		"@types/react": "18.3.12",
+		"@types/react-dom": "18.3.1",
+		"astro": "4.16.7",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"sharp": "0.33.5",
+		"tailwindcss": "3.4.14",
+		"typescript": "5.6.3"
+	},
+	"author": "",
+	"description": "module website",
+	"license": "UNLICENSED",
+	"type": "module",
+	"packageManager": "bun@1.1.33",
+	"trustedDependencies": ["sharp"]
 }
